# pyppmd

./: .gitattributes  .gitignore  .woodpecker.yml  CMakeLists.txt  Changelog.old.rst  Changelog.rst  LICENSE  LICENSE.rst  LicenseNotices.rst  MANIFEST.in  README.rst  SECURITY.md  SECURITY.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cibuildwheel.yml  codeql-analysis.yml  publish-to-pypi.yml  release-note.yml  run-benchmark.yml  run-docs-test.yml  run-tox-tests.yml  stale.yml
.woodpecker/: .check-multiarch.yml  .check.yml
ci/azure-pipelines/: CodeBerg-pyppmd-CI.yml
docs/: api_guide.rst  authors.rst  changelog.rst  conf.py  contribution.rst  getting_started.rst  index.rst  license_notices.rst  ppmd7.rst  ppmd8.rst  security_policy.rst  user_guide.rst
issue_template/: bug_report.md  feature_request.md
lib/: Arch.h  Interface.h  License.txt  Ppmd.h  Ppmd7.c  Ppmd7.h  Ppmd7Enc.c  Ppmd8.c  Ppmd8.h  Ppmd8Enc.c
lib2/: Buffer.c  Buffer.h  Ppmd8Tdecoder.c  Ppmd8Tdecoder.h  ThreadDecoder.c  ThreadDecoder.h  threading.c  threading.h  win_pthreads.h
src/: __init__.py  __init__.pyi
src/c/: c_ppmd.py  c_ppmd.pyi
src/cffi/: cffi_ppmd.py  cffi_ppmd.pyi
src/ext/: Buffer.c  Buffer.h  Ppmd8Tdecoder.c  Ppmd8Tdecoder.h  _ppmdmodule.c  ffi_build.py  threading.h
src/lib/buffer/: ThreadDecoder.c  blockoutput.h  win_pthreads.h
src/lib/ppmd/: Arch.h  Ppmd7Dec.c  Ppmd7Dec2.c  Ppmd7Dec2.cpp  Ppmd7Dec2.h  Ppmd7Enc.c  Ppmd8.c  Ppmd8Dec.c
src/pyppmd/: __init__.py  __init__.pyi
src/pyppmd/c/: c_ppmd.py
src/pyppmd/cffi/: cffi_ppmd.py
src/pyppmd_zip/: __init__.pyi
src/pyppmd_zip/cffi/: cffi_ppmd.py
tests/: conftest.py  test_benchmark.py  test_fuzzer.py  test_highlevel_api.py  test_ppmd7.py  test_ppmd7_fuzzer.py  test_ppmd8.py
tests/data/: .gitattributes  data.ppmd  testdata2.ppmd
utils/: bench_result.py  github_comment_bench.py
