[metadata]
name = pyppmd
description = PPMd compression/decompression library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ppmd, 7-zip, compression
license = The 3-Clause BSD License
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/pyppmd
classifiers =
      Development Status :: 2 - Pre-Alpha
      "License :: OSI Approved :: BSD License",
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3 :: Only
      Topic :: Software Development :: Libraries :: Python Modules

[options]
setup_requires =
      setuptools-scm>=6.0.1
      setuptools>=45.0

[options.package_data]
ppmd: *.pyi, py.typed

[options.entry_points]
console_scripts =
    ppmd = ppmd:main

[options.extras_require]
test =
      pytest
      pytest-cov
      hypothesis
      coverage[toml]>=5.2
check =
      mypy>=0.812
      mypy_extensions>=0.4.3
      check-manifest
      flake8
      flake8-black
      readme-renderer
      pygments
      isort>=5.0.3
docs =
      sphinx>=1.8
fuzzer =
      atheris
      hypothesis
