[metadata]
name = pyppmd
description = PPMd compression/decompression library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = ppmd, 7-zip, compression
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/pyppmd
classifiers =
      Development Status :: 4 - Beta
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10
      Programming Language :: Python :: 3 :: Only
      Programming Language :: Python :: Implementation :: CPython
      Programming Language :: Python :: Implementation :: PyPy
      Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
setup_requires =
      setuptools-scm>=6.0.1
      setuptools>=58.0

[options.package_data]
pyppmd: py.typed

[options.extras_require]
test =
      pytest>=6.0
      pytest-benchmark
      pytest-cov
      pytest-timeout
      hypothesis
      coverage[toml]>=5.2
check =
      mypy>=0.812
      mypy_extensions>=0.4.3
      check-manifest
      flake8
      flake8-black
      readme-renderer
      pygments
      isort>=5.0.3
docs =
      sphinx>=2.3
      sphinx_rtd_theme
fuzzer =
      atheris
      hypothesis

[flake8]
max-line-length = 125
extend-ignore = E203, W503
ignore = F841
